# docdb-mcp

./: README.md  pyproject.toml
src/docdb_mcp/: server.py
tests/: test_server.py
