[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docdb-mcp"
version = "0.1.0"
description = "MCP server for DOCDB patent ID disambiguation"
requires-python = ">=3.10"
authors = [
    {name = "Guillaume Filion", email = "guillaume.filion@gmail.com"}
]
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.scripts]
docdb-mcp = "docdb_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/docdb_mcp"]
